# token

./: .gitignore  .lychee.toml  AGENTS.md  CLAUDE.md  CODEBASE_REVIEW.md  Cargo.toml  EDITOR_UI_REFERENCE.md  LICENSE.md  Makefile  OVERVIEW.md  README.md  bacon.toml  build.rs  dist-workspace.toml  keymap.yaml  todo.md
.github/workflows/: bench.yml  build.yml  ci.yml  links.yml  release.yml
assets/: OFL.txt  icon.icns  index.html
benches/: glyph_cache.rs  hot_paths.rs  layout.rs  main_loop.rs  rendering.rs  rope_operations.rs  search.rs  support.rs  syntax.rs  workspace.rs
docs/: BENCHMARKING.md  BUILDING_WITH_AI.md  CHANGELOG.md  CODEBASE_REVIEW.md  CONTRIBUTING.md  EDITOR_UI_REFERENCE.md  FEEDBACK.md  GUI-CLEANUP.md  GUI-REVIEW-FINDINGS.md  KEYBINDINGS.md  ORGANIZATION-CODEBASE.md  PLAN.md  POTENTIAL-REFACTORS.md  PROFILING.md  PROGRESS.md  README.md  ROADMAP.md  THEMES.md  THEMING_SYSTEM.md  TOOLING_IMPROVEMENTS.md  UI-SCALING-REVIEW.md  UI_SYSTEM_CODEREVIEW.md  blog-post.md  multi-cursor-bugtracker.md  profiling-guide.md
docs/analysis/: DX_IMPROVEMENTS.md  HOT_PATHS.md  PERFORMANCE_AUDIT.md  RENDERING_PIPELINE.md  SYNTHESIS.md  TEST_INFRASTRUCTURE.md
docs/archived/: BUGFIX_PLAN.md  FEEDBACK_BUGFIX_SESSION.md  GUI-CLEANUP.md  GUI-REVIEW-FINDINGS.md  KEYMAPPING.md  KEYMAPPING_IMPLEMENTATION_PLAN.md  MULTI_CURSOR_MOVEMENT.md  MULTI_CURSOR_SELECTION_GAPS.md  ORGANIZATION-CODEBASE.md  PLAN.md  SELECTION_MULTICURSOR.md  SPLIT_VIEW.md  STATUS_BAR.md  TEXT_PHYSICS_LAYER.md  TODO.md  TOOLING_IMPROVEMENTS.md  UI-SCALING-REVIEW.md  benchmark-improvements.md  code-outline.md  column-selection.md  csv-editor.md  file-operations.md  find-basic.md  line-operations.md  markdown-preview.md  multi-cursor-bugtracker.md  multi-selection-behaviours.md  old-roadmap-file.md  panel-ui-abstraction.md  performance-analysis-v1.md  performance-analysis.md  recent-files.md  replace-basic.md  select-next-occurrence.md  selection-rect-preview-drawing.md  syntax-highlighting.md  tree-navigation-abstraction.md  unified-text-editing-final.md  unified-text-editing.md  workspace-management.md
docs/dev/: contracts-selection.md  contracts-undo.md
docs/feature/: DAMAGE-TRACKING.md  KEYMAPPING.md  KEYMAPPING_IMPLEMENTATION_PLAN.md  MULTI_CURSOR_SELECTION_GAPS.md  SELECTION_MULTICURSOR.md  SPLIT_VIEW.md  STATUS_BAR.md  TEXT-SHRINK-EXPAND-SELECTION.md  THEMING.md  adding-languages.md  auto-save.md  benchmark-improvements.md  column-selection.md  context-menu.md  csv-editor-gap-analysis.md  csv-editor.md  diff-gutter.md  editorconfig.md  embedded-terminal.md  file-change-detection.md  file-dialogs.md  file-operations.md  find-enhancements.md  folding-advanced.md  folding-basic.md  folding.md  gesture-bindings.md  goto-line-enhancements.md  handle-file-dropping.md  indent-guides.md  line-operations.md  macros.md  markdown-preview.md  panel-ui-abstraction.md  quick-open.md  recent-files.md  replace-enhancements.md  select-next-occurrence.md  sema-scripting-integration.md  session-restore.md  (+9 more)
docs/future/: command-palette-enhancements.md  enhanced-file-finder.md  keymap-enhancements.md  wasm-web-target.md  whitespace-management.md  whitespace-rendering.md
docs/improvements/: architecture_review_report.md  implementation_plan.md  walkthrough.md
docs/misc/: LINTER-WARNINGS-EXPLAINED.md
docs/plans/: 2026-02-18-theme-creator.md  2026-02-27-sidebar-clipping-design.md  2026-02-27-sidebar-clipping.md  2026-02-28-image-viewer-pan-zoom-design.md  2026-02-28-image-viewer-pan-zoom-plan.md  2026-03-10-view-layer-balanced-refactor.md  2026-03-10-view-layer-redesign.md  2026-03-10-view-rendering-consolidation.md
docs/templates/: FEATURE_SPEC.md
docs/user/: config-editor.md  config-keymap.md  config-theme.md
macos/: Info.plist
queries/bash/: highlights.scm
queries/blade/: highlights.scm
queries/c/: highlights.scm
queries/cpp/: highlights.scm
queries/css/: highlights.scm
queries/go/: highlights.scm
queries/html/: highlights.scm
queries/java/: highlights.scm
queries/javascript/: highlights.scm
queries/json/: highlights.scm
queries/markdown/: highlights.scm  inline-highlights.scm
queries/php/: highlights.scm
queries/python/: highlights.scm
queries/rust/: highlights.scm
queries/sema/: highlights.scm
queries/toml/: highlights.scm
queries/tsx/: highlights.scm
queries/yaml/: highlights.scm
samples/: ampcode.md  claude.md  emoji_unicode.txt  gap-jump.txt  large_data.csv  long_lines.txt  mixed_whitespace.txt  multi-cursor-challenge.txt  sample.html  sample_code.rs  single_line.txt  unicode.txt  zalgo.txt
samples/syntax/: CMakeLists.txt  Makefile  sample.Dockerfile  sample.adb  sample.asm  sample.astro  sample.awk  sample.blade.php  sample.c  sample.clj  sample.cpp  sample.cs  sample.css  sample.cue  sample.d  sample.dart  sample.dhall  sample.erl  sample.ex  sample.fish  sample.fnl  sample.forth  sample.gleam  sample.glsl  sample.go  sample.graphql  sample.hs  sample.html  sample.hurl  sample.ini  sample.janet  sample.java  sample.jl  sample.js  sample.json  sample.jsx  sample.just  sample.kdl  sample.kt  sample.lisp  (+44 more)
src/: app.rs  cli.rs  commands.rs  config.rs  config_paths.rs  debug_dump.rs  debug_overlay.rs  fs_watcher.rs  input.rs  lib.rs  main.rs  messages.rs  overlay.rs  perf.rs  recent_files.rs  theme.rs  tracing.rs  update.rs  util.rs  view.rs
test_files/: indentation.txt  sample_code.rs  trailing-whitespace.txt  trailing_whitespace.txt
tests/: app_messages.rs  config.rs  cursor_clamping.rs  cursor_movement.rs  document_cursor.rs  edge_cases.rs  editor_area.rs  expand_shrink_selection.rs  file_path_commands.rs  geometry.rs  image_viewer.rs  layout.rs  modal.rs  monkey_tests.rs  multi_cursor.rs  overlay.rs  scrolling.rs  selection.rs  status_bar.rs  text_editing.rs  theme.rs  workspace.rs
themes/: dark.yaml  dracula.yaml  fleet-dark.yaml  github-dark.yaml  github-light.yaml  gruvbox-dark.yaml  mocha.yaml  nord.yaml  tokyo-night.yaml
video/: README.md  run.sh
website/: .gitignore  astro.config.mjs  index.html  package-lock.json  package.json  style.css  vercel.json
(+168 files in other folders)
