[package]
name = "token"
version = "0.3.8"
edition = "2021"

[features]
default = []
dhat-heap = ["dhat"]

[dependencies]
winit = "0.30.12"
softbuffer = "0.4"
ropey = "1.6"
raw-window-handle = "0.6"

# For font rendering
fontdue = "0.9.3"

# For better error handling
anyhow = "1.0"

# For theming (YAML configuration) and state serialization
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"

# Tracing (debug instrumentation)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# For clipboard support
arboard = "3.4"

# For native file dialogs
rfd = "0.15"

# For window icon loading
image = { version = "0.25", default-features = false, features = ["png"] }

# For CLI argument parsing
clap = { version = "4", features = ["derive"] }

# For user config directory detection
dirs = "5"

# For CSV parsing (RFC 4180 compliant)
csv = "1.3"

# Syntax highlighting with tree-sitter
tree-sitter = "0.25"
tree-sitter-yaml = "0.6"
tree-sitter-md = "0.3"
tree-sitter-rust = "0.23"
tree-sitter-html = "0.23"
tree-sitter-css = "0.23"
tree-sitter-javascript = "0.23"

# Phase 3 languages (Priority)
tree-sitter-typescript = "0.23"
tree-sitter-json = "0.24"
tree-sitter-toml-ng = "0.7"

# Phase 4 languages (Common)
tree-sitter-python = "0.25"
tree-sitter-go = "0.25"
tree-sitter-php = "0.24"

# Phase 5 languages (Extended)
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-java = "0.23"
tree-sitter-bash = "0.25"

streaming-iterator = "0.1"

# Optional: heap profiling
dhat = { version = "0.3", optional = true }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[dev-dependencies]
divan = "0.1"
tempfile = "3"

[[bench]]
name = "rope_operations"
harness = false

[[bench]]
name = "glyph_cache"
harness = false

[[bench]]
name = "rendering"
harness = false

[[bench]]
name = "main_loop"
harness = false

[[bench]]
name = "search"
harness = false

[[bench]]
name = "layout"
harness = false

[[bench]]
name = "syntax"
harness = false

# Profiling profile: release speed with debug symbols
[profile.profiling]
inherits = "release"
debug = true
lto = false
codegen-units = 1