[package]
name = "token"
version = "0.3.19"
edition = "2021"
default-run = "token"
autobins = false
description = "A fast, minimal multi-cursor text editor with syntax highlighting"
homepage = "https://token-editor.com"
repository = "https://github.com/HelgeSverre/token"
license = "MIT"
authors = ["Helge Sverre <helge.sverre@gmail.com>"]
readme = "README.md"
keywords = ["editor", "text-editor", "syntax-highlighting", "terminal", "rust"]
categories = ["text-editors", "development-tools"]
exclude = ["samples/", "docs/", "*.md", "Makefile", "assets/icon.png"]

[[bin]]
name = "token"
path = "src/main.rs"

[[bin]]
name = "screenshot"
path = "src/bin/screenshot.rs"

[[bin]]
name = "profile_render"
path = "src/bin/profile_render.rs"

[features]
default = []
dhat-heap = ["dhat"]
# Enable debug visualization of damage regions (colored outlines)
damage-debug = []

[dependencies]
winit = "0.30.12"
softbuffer = "0.4"
ropey = "1.6"
raw-window-handle = "0.6"

# For font rendering
fontdue = "0.9.3"

# For better error handling
anyhow = "1.0"

# For theming (YAML configuration) and state serialization
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"

# Tracing (debug instrumentation)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"

# For clipboard support
arboard = "3.4"

# For native file dialogs
rfd = "0.15"

# For window icon loading
image = { version = "0.25", default-features = false, features = ["png"] }

# For CLI argument parsing
clap = { version = "4", features = ["derive"] }

# For Markdown preview
pulldown-cmark = "0.12"
wry = "0.54"
open = "5"  # For opening URLs in default browser

# For user config directory detection
dirs = "5"

# For file system watching (workspace file tree)
notify = "6.1"
notify-debouncer-mini = "0.4"

# For CSV parsing (RFC 4180 compliant)
csv = "1.3"

# Syntax highlighting with tree-sitter
tree-sitter = "0.25"
tree-sitter-yaml = "0.6"
tree-sitter-md = "0.5"
tree-sitter-rust = "0.23"
tree-sitter-html = "0.23"
tree-sitter-css = "0.23"
tree-sitter-javascript = "0.23"

# Phase 3 languages (Priority)
tree-sitter-typescript = "0.23"
tree-sitter-json = "0.24"
tree-sitter-toml-ng = "0.7"

# Phase 4 languages (Common)
tree-sitter-python = "0.25"
tree-sitter-go = "0.25"
tree-sitter-php = "0.24"

# Phase 5 languages (Extended)
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-java = "0.23"
tree-sitter-bash = "0.25"

# Phase 6 languages (Specialized)
tree-sitter-racket = "0.24"
tree-sitter-ini = "1.4"
tree-sitter-xml = "0.7"

streaming-iterator = "0.1"

# For fuzzy file finder
nucleo-matcher = "0.3"

# Optional: heap profiling
dhat = { version = "0.3", optional = true }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[package.metadata.bundle]
name = "Token"
identifier = "no.helgesverre.token"
icon = ["assets/icon.icns", "assets/icon.ico"]
category = "public.app-category.developer-tools"
copyright = "Copyright (c) Helge Sverre 2026"
short_description = "A fast, multi-cursor code editor built in Rust"
long_description = """
Token is a lightweight, high-performance code editor inspired by JetBrains IDEs.
Built entirely in Rust with CPU-based rendering, it features powerful multi-cursor editing,
syntax highlighting via Tree-sitter, customizable themes and keybindings, and a responsive
file tree sidebar. Designed for developers who value speed and simplicity.
"""
osx_minimum_system_version = "11.0"

[package.metadata.bundle.bin.token]
name = "Token"
identifier = "no.helgesverre.token"
icon = ["assets/icon.icns", "assets/icon.ico"]

[dev-dependencies]
divan = "0.1"
tempfile = "3"

[[bench]]
name = "rope_operations"
harness = false

[[bench]]
name = "glyph_cache"
harness = false

[[bench]]
name = "rendering"
harness = false

[[bench]]
name = "main_loop"
harness = false

[[bench]]
name = "search"
harness = false

[[bench]]
name = "layout"
harness = false

[[bench]]
name = "syntax"
harness = false

[[bench]]
name = "workspace"
harness = false

[[bench]]
name = "hot_paths"
harness = false

# Dev profile: fast compile, basic debugging
[profile.dev]
opt-level = 0
debug = "line-tables-only"  # Faster compile than full debug
incremental = true

# No debug info for dependencies (faster compile)
[profile.dev.package."*"]
debug = false

# Debugging profile: full debug info when needed (cargo build --profile debugging)
[profile.debugging]
inherits = "dev"
debug = true

# Release profile: optimized, fast compile for local testing
[profile.release]
opt-level = 3
lto = "thin"
strip = false
panic = "abort"

# Dist profile: maximum optimization for distribution
[profile.dist]
inherits = "release"
lto = "fat"
codegen-units = 1
strip = true

# Profiling profile: release speed with debug symbols
[profile.profiling]
inherits = "release"
debug = true
lto = false
strip = false